syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "user";

service UserService {
  rpc RegisterUser(UserRequest) returns (UserResponse);
  rpc GetUser(UserRequest) returns (UserResponse);
}

message UserRequest {
  string id = 1;
  string name = 2;
}

message UserResponse {
  string id = 1;
  string name = 2;
}
